Fix collecting to list