@@ -2,6 +2,7 @@ package io.github.mizinchik;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CompositeArrayStream extends CompositeArrayConsecutive {
     public CompositeArrayStream(int[] array) {
@@ -9,7 +10,7 @@ public class CompositeArrayStream extends CompositeArrayConsecutive {
     }
 
     boolean containsCompositeStream() {
-        List<Integer> list = Arrays.stream(getArray()).boxed().toList();
+        List<Integer> list = Arrays.stream(getArray()).boxed().collect(Collectors.toList());
         return list.parallelStream()
                 .filter(number -> !isPrime(number))
                 .findFirst().orElse(null) != null;
